Allow for difficulty selection, add button animations and dynamically update application state

--- a/src/app/components/difficulty-selector/difficulty-selector.component.html
+++ b/src/app/components/difficulty-selector/difficulty-selector.component.html
@@ -6,7 +6,7 @@
 
     <ng-container *ngFor="let difficulty of difficulties">
       <div>
-        <button>
+        <button (click)="selectDifficulty(difficulty)">
           <strong>
             {{ difficulty }}
           </strong>
