--- a/src/app/shared/components/words/words.component.html
+++ b/src/app/shared/components/words/words.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="(view$ | async)?.isShown">
   <section>
     <p>
-      <ng-container *ngFor="let word of (words$ | async)?.words">
-        {{ word }}
+      <ng-container *ngIf="(words$ | async)?.words as words">
+        <ng-container *ngFor="let letter of words.split('')">
+          <span [class]="color">{{ letter }}</span>
+        </ng-container>
       </ng-container>
     </p>
   </section>
