--- a/src/assets/partials/shared/words/_words.component.scss
+++ b/src/assets/partials/shared/words/_words.component.scss
@@ -6,6 +6,16 @@
       text-align: center;
       padding: 25px;
       font-size: 2rem;
+
+      span {
+        &.red {
+          background-color: red;
+        }
+
+        &.green {
+          background-color: green;
+        }
+      }
     }
   }
 }
