--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,6 +8,10 @@
       GitHub
     </a>
 
+    <button (click)="showInstructions()">
+      Instructions
+    </button>
+
     <span [title]="currentYear">
       {{ currentYear }}
     </span>
