--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -2,4 +2,5 @@
   <app-words></app-words>
   <app-difficulty-selector></app-difficulty-selector>
   <app-form></app-form>
+  <app-instructions></app-instructions>
 </main>
