--- a/src/app/shared/components/instructions/instructions.component.html
+++ b/src/app/shared/components/instructions/instructions.component.html
@@ -2,6 +2,9 @@
   <section>
     <p>
       Your goal is to type as fast as possible!
+    </p>
+
+    <p>
       Make sure to also not make any mistakes!
     </p>
 
@@ -9,7 +12,7 @@
       Are you ready?
     </p>
 
-    <button (click)="goBack()">
+    <button (click)="goBackToFormView()">
       Yes!
     </button>
   </section>
