--- a/src/assets/partials/shared/instructions/_instructions.scss
+++ b/src/assets/partials/shared/instructions/_instructions.scss
@@ -1,4 +1,5 @@
 @import "../button/_button.scss";
+@import "../colors/_colors.scss";
 
 @mixin instructions-component {
   section {
@@ -6,7 +7,14 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 200px;
+    background-color: lighten($main-background-color, 2%);
+    padding: 12px;
+    height: 250px;
+
+    p,
+    button {
+      font-weight: bold;
+    }
 
     p {
       font-size: 1.2rem;
