--- a/src/app/shared/components/information/information.component.html
+++ b/src/app/shared/components/information/information.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="difficulty$ | async as difficulty">
-  <section>
+  <section @fadeIn>
     <span>
       <strong>
         Difficulty: {{ difficulty }}
