--- a/src/app/shared/components/instructions/instructions.component.html
+++ b/src/app/shared/components/instructions/instructions.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="(view$ | async)?.isShown">
-  <section>
+  <section @fadeIn>
     <p>
       Your goal is to type as fast as possible!
     </p>
