--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="(view$ | async)?.isShown">
-  <footer>
+  <footer @fadeIn>
     <a
       href="https://github.com/AdibZidan"
       rel="nofollow noopener noreferrer"
