--- a/src/assets/partials/components/footer/_footer.component.scss
+++ b/src/assets/partials/components/footer/_footer.component.scss
@@ -5,6 +5,7 @@
   footer {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color: darken($main-background-color, 5%);
     padding: 16px;
 
