Replace text with real quotes and scroll into last correct typed letter

--- a/src/app/shared/components/words/words.component.html
+++ b/src/app/shared/components/words/words.component.html
@@ -4,6 +4,7 @@
       <ng-container *ngIf="(words$ | async)?.words as words">
         <span
           appHighlight
+          appScrollIntoView
           [words]="words"
           [letter]="letter">
         </span>
