Show user stats upon successful completion

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,4 +3,5 @@
   <app-difficulty-selector></app-difficulty-selector>
   <app-form></app-form>
   <app-instructions></app-instructions>
+  <app-modal></app-modal>
 </main>
