--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -15,7 +15,7 @@
         Would you like to try again?
       </p>
 
-      <button (click)="returnBackToDifficultySelector()">
+      <button (click)="[returnBackToDifficultySelector(), resetApplicationState()]">
         Yes
       </button>
     </div>
